help edit me too

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 .inner{display:table;margin: 0px auto;
 	border:0px solid red; }
+
+body{background:white url(../images/logos.gif) repeat-x;
+	margin:0px; padding:0px}
 .menu a:link, .menu a:visited{color:#000; text-decoration:none; 
 	font-family:"Arial Black", Gadget, sans-serif; font:italic; 
 	font-size:15px; margin-right:38px}
@@ -13,24 +16,20 @@ text-decoration:underline}
 
 
 #txtSearch {
-	height:30px;
-	width:250px;
-	border-radius:8px;
-	border:3px solid #936;
 	font-family:"Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-size:15px;
 	font-style:italic;
 }
 
-#footer{
-	background-color:#339;
-	text-align:center;	
-	width:1050px;
-	height:35px;
-	margin-top:610px;
-	color:#F60;
-	margin-left:0px;
-}
+//#footer{
+//	background-color:#339;
+//	text-align:center;	
+//	width:1050px;
+//	height:35px;
+//	margin-top:500px;
+//	color:#F60;
+//	margin-left:0px;
+//}
 
 #container >br {display:none;
 			height:300px;
@@ -40,13 +39,13 @@ text-decoration:underline}
 #menu{
 	width: 1050px;
 	float:left; /*display full length*/
-	background:#09F;
+	background:#09c;
 	
 }
 #navMenu ul {
 	width:100%;
 	background:#06C;			
-    font-size: 14px;
+    font-size:15px;
     list-style: none;
 	margin:0 auto;		  
 	padding:0px;
@@ -65,9 +64,9 @@ text-decoration:underline}
     display: block;
     text-decoration: none;
     color:#000;  /*font color #ffffff;*/
-    border-right: 5px solid white;	
-    padding: 18px 25px 10px 25px;
-    background: #33c8ff;
+    border-right:5px solid white;	
+    padding: 18px 25px 10px 26px;
+    background:#0FC;
 	border-radius:2px;
 	font:italic;
 }
@@ -91,3 +90,5 @@ text-decoration:underline}
 #navMenu li:hover li a:hover {
     background:#FC0;
 }
+
+
